fix end game condition & card visibility

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body{
 }
 
 img{
-  margin: 0 auto;
+  margin-bottom: 20px;
   height: 100px;
 }
 
@@ -33,18 +33,28 @@ img{
 #gameArea{
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
-#gameArea > *{
+/* #gameArea > *{
   width: 50%;
-}
+} */
 
 #results{
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 100px 0;
+}
+
+#info{
+  margin-left: 20px;
+}
+
+h1{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 h1, h2{
@@ -54,6 +64,7 @@ h1, h2{
 
 h3{
   font-family: 'Mukta', sans-serif;
+  margin: 5px 0;
 }
 
 #outcome{
@@ -62,6 +73,7 @@ h3{
 
 #cardsLeft{
   font-style: italic;
+  margin-bottom: 20px;
 }
 
 .scoreSection{
